# koyofes-matching-app-backend

./: .gitignore  .pre-commit-config.yaml  README.md  alias.sh  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: BUG_REPORT.md  FEATURE.md
docs/ER/: er.drawio
fastapi/: Dockerfile  fastapi.env.tmpl  gunicorn.conf.django.py  gunicorn.conf.fastapi.py  pyproject.toml
fastapi/config/: asgi.py  auth.py  jwt.py  log.py  twilio.py  urls.py
fastapi/config/settings/: base.py  local.py
fastapi/matching/admin/: __init__.py  user.py
fastapi/matching/api/: auth.py  user.py
fastapi/matching/middlewares/: auth.py
fastapi/matching/migrations/: 0001_user.py  0002_user_is_verified.py  0003_user_department_user_description_user_grade_and_more.py  0004_alter_user_department_alter_user_sex.py
fastapi/matching/models/: __init__.py  department.py  sex.py  user.py
fastapi/matching/routers/: auth.py  user.py
fastapi/matching/schemas/: auth.py  user.py
